--- a/index.html
+++ b/index.html
@@ -1,3 +1,8 @@
+<!DOCTYPE html>
+<head>
+  <title>MiuWeb.me | Home</title>
+</head>
+
 WEBSITE UNDER CONSTRUCTION!
 
 Check back soon for updates :)
