--- a/index.html
+++ b/index.html
@@ -2,9 +2,10 @@
 <head>
   <title>MiuWeb.me | Home</title>
 </head>
-
+<body>
 WEBSITE UNDER CONSTRUCTION!
 
 Check back soon for updates :)
 
 Copyright 2016 Rima G.
+</body>
