--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <title>MiuWeb.me | Home</title>
 </head>
 <body>
+<h1>Creative Designs from Downtown Miami.</h1>
 WEBSITE UNDER CONSTRUCTION!
 
 Check back soon for updates :)
