--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 </head>
 <body>
 <h1>Creative Designs from Downtown Miami.</h1>
+<h2>We are a small creative university located in the heart of downtown Miami. Our students love to design.</h2>
 WEBSITE UNDER CONSTRUCTION!
 
 Check back soon for updates :)
