--- a/index.html
+++ b/index.html
@@ -1,6 +1,14 @@
 <!DOCTYPE html>
 <head>
   <title>MiuWeb.me | Home</title>
+  <style>
+    body{
+      text-align: center;
+      background-color: black;
+      color: white;
+      font-family: sans-serif;
+    }
+  </style>
 </head>
 <body>
 <h1>Creative Designs from Downtown Miami.</h1>
