--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <style>
     body{
       text-align: center;
-      background-color: black;
+      background-color: #D6FFD3;
       color: white;
       font-family: sans-serif;
     }
@@ -18,4 +18,7 @@ WEBSITE UNDER CONSTRUCTION!
 Check back soon for updates :)
 
 Copyright 2016 Rima G.
+
+<a href="http://www.linkedin.com/in/rimagerhard">LinkedIn</a> - Twitter - Instagram
+
 </body>
