--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   </style>
 </head>
 <body>
+<img src="http://i.imgur.com/VHRD9dx.png">  
 <h1>Creative Designs from Downtown Miami.</h1>
 <h2>We are a small creative university located in the heart of downtown Miami. Our students love to design.</h2>
 WEBSITE UNDER CONSTRUCTION!
