--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
   <style>
     body{
       text-align: center;
-      background-color: #D6FFD3;
-      color: white;
+      background-color: white;
+      color: black;
       font-family: sans-serif;
     }
   </style>
