--- a/index.html
+++ b/index.html
@@ -1,25 +1,55 @@
 <!DOCTYPE html>
 <head>
+  <meta charset="UTF-8">
   <title>MiuWeb.me | Home</title>
+<link href='https://fonts.googleapis.com/css?family=Holtwood+One+SC' rel='stylesheet' type='text/css'>  
   <style>
     body{
+      margin-top: 100px;
       text-align: center;
-      background-color: white;
-      color: black;
       font-family: sans-serif;
+      background-image: url(https://static.pexels.com/photos/1852/dawn-landscape-mountains-nature.jpg);
+      background-size: cover;
+      background-repeat: no-repeat;
     }
+
+    h1{
+    	font-family: 'Holtwood One SC', serif;
+    	text-shadow: 2px 2px 2px grey;
+    	transition: 1s all;
+    	font-size: 34px;
+    	color: #FFF;
+    }
+    
+    h1:hover{
+    	font-size: 36px;
+    	text-shadow: 2px 2px 5px orange;
+    }
+
+    a{
+    	color: #FFF;
+    	text-decoration: none;	
+    	transition: 1s all;
+    }
+    a:visited{
+    	color: grey;
+    }
+    a:hover{
+    	color: orange;
+    }
+
   </style>
 </head>
 <body>
 <img src="http://i.imgur.com/VHRD9dx.png">  
-<h1>Creative Designs from Downtown Miami.</h1>
-<h2>We are a small creative university located in the heart of downtown Miami. Our students love to design.</h2>
+<h1>☆ Creative Designs from Downtown Miami. ☆</h1>
+<h2>We are a small creative university located in the heart of downtown Miami. Our students love to design.	</h2>
 WEBSITE UNDER CONSTRUCTION!
 
 Check back soon for updates :)
 
 Copyright 2016 Rima G.
 
-<a href="http://www.linkedin.com/in/rimagerhard">LinkedIn</a> - Twitter - Instagram
+<a href="http://www.linkedin.com/in/rimagerhard">LinkedIn</a> - <a href="#">Twitter</a> - Instagram
 
 </body>
