--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
 <link href='https://fonts.googleapis.com/css?family=Holtwood+One+SC' rel='stylesheet' type='text/css'>  
   <style>
     body{
-      margin-top: 100px;
+      margin: 100px;
       text-align: center;
       font-family: sans-serif;
-      background-image: url(https://static.pexels.com/photos/1852/dawn-landscape-mountains-nature.jpg);
+      background:  linear-gradient(
+				      rgba(255, 255, 255, 0.75), 
+				      rgba(255, 255, 255, 0.75)
+				    ),
+      					url(https://c2.staticflickr.com/4/3369/3524603348_259b91a3e5_o.jpg);
       background-size: cover;
       background-repeat: no-repeat;
     }
