--- a/index.html
+++ b/index.html
@@ -5,18 +5,10 @@
 <link href='https://fonts.googleapis.com/css?family=Holtwood+One+SC' rel='stylesheet' type='text/css'>  
   <style>
     body{
-      margin: 100px;
+      margin: 0;
       text-align: center;
       font-family: sans-serif;
-      background:  linear-gradient(
-				      rgba(255, 255, 255, 0.75), 
-				      rgba(255, 255, 255, 0.75)
-				    ),
-      					url(https://c2.staticflickr.com/4/3369/3524603348_259b91a3e5_o.jpg);
-      background-size: cover;
-      background-repeat: no-repeat;
     }
-
     h1{
     	font-family: 'Holtwood One SC', serif;
     	text-shadow: 2px 2px 2px grey;
@@ -29,7 +21,6 @@
     	font-size: 36px;
     	text-shadow: 2px 2px 5px orange;
     }
-
     a{
     	color: #FFF;
     	text-decoration: none;	
@@ -42,18 +33,44 @@
     	color: orange;
     }
 
+    #hero{
+      padding: 15px;
+      background:  url(https://c2.staticflickr.com/4/3369/3524603348_259b91a3e5_o.jpg);
+      background-size: cover;
+      background-repeat: no-repeat;            
+    }
+
+    #what-we-do{
+      background-color: #B8BCBD;
+      padding: 15px;
+    }
+
+    #who-we-are{
+      background-color: black;
+      padding: 15px;
+    }
+
   </style>
 </head>
 <body>
-<img src="http://i.imgur.com/VHRD9dx.png">  
-<h1>☆ Creative Designs from Downtown Miami. ☆</h1>
-<h2>We are a small creative university located in the heart of downtown Miami. Our students love to design.	</h2>
-WEBSITE UNDER CONSTRUCTION!
+<section id="hero">
+  <img src="http://i.imgur.com/VHRD9dx.png">  
+  <h1>☆ Creative Designs from Downtown Miami. ☆</h1>
+  <h2>We are a small creative university located in the heart of downtown Miami. Our students love to design.	</h2>
+  WEBSITE UNDER CONSTRUCTION!
 
-Check back soon for updates :)
+  Check back soon for updates :)
 
-Copyright 2016 Rima G.
+  Copyright 2016 Rima G.
 
-<a href="http://www.linkedin.com/in/rimagerhard">LinkedIn</a> - <a href="#">Twitter</a> - Instagram
-
+  <a href="http://www.linkedin.com/in/rimagerhard">LinkedIn</a> - <a href="#">Twitter</a> - Instagram
+</section>
+<section id="what-we-do">
+  <h1>What we do</h1>
+  <p>Place 3 icons here illustrating what we do.</p>
+</section>
+<section id="who-we-are">
+<h1>Who we are</h1>
+<img src="http://gravatar.com/avatar/84b921aa2a51d74054cf78cc38c58973?s=512">
+</section>
 </body>
