--- a/index.html
+++ b/index.html
@@ -50,9 +50,18 @@
       padding: 15px;
     }
 
+    nav{
+      position: absolute;
+      top: 50px;
+      right: 80px;
+    }
+
   </style>
 </head>
 <body>
+  <nav>
+    Home | <a href="#who-we-are">About</a> | Contact
+  </nav>
 <section id="hero">
   <img src="http://i.imgur.com/VHRD9dx.png">  
   <h1>☆ Creative Designs from Downtown Miami. ☆</h1>
