--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
       padding: 15px;
       background:  url(https://c2.staticflickr.com/4/3369/3524603348_259b91a3e5_o.jpg);
       background-size: cover;
-      background-repeat: no-repeat;            
+      background-repeat: no-repeat;  
+      background-attachment: fixed;         
     }
     #what-we-do{
       background-color: #B8BCBD;
@@ -45,6 +46,14 @@
     #who-we-are{
       background-color: black;
       padding: 15px;
+    }
+    #where-we-are{
+      height: 400px;
+      padding: 40px;
+      background:  url(https://c2.staticflickr.com/4/3369/3524603348_259b91a3e5_o.jpg);
+      background-size: cover;
+      background-repeat: no-repeat;  
+      background-attachment: fixed; 
     }
     nav{
       position: absolute;
@@ -61,21 +70,24 @@
   <img src="http://i.imgur.com/VHRD9dx.png">  
   <h1>☆ Creative Designs from Downtown Miami. ☆</h1>
   <h2>We are a small creative university located in the heart of downtown Miami. Our students love to design.	</h2>
-  WEBSITE UNDER CONSTRUCTION!
 
-  Check back soon for updates :)
 
-  Copyright 2016 Rima G.
 
   <a href="http://www.linkedin.com/in/rimagerhard">LinkedIn</a> - <a href="#">Twitter</a> - Instagram
 </section>
 <section id="what-we-do">
   <h1>What we do</h1>
   <p>We provide web design and development services. <a href="" onclick="showPrices(event)">Please see our price list.</a></p>
+<!-- SnapWidget -->
+<iframe src="http://snapwidget.com/in/?u=bWl1d2VifGlufDEyNXwzfDN8fG5vfDV8bm9uZXxvblN0YXJ0fHllc3xubw==&ve=080316" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:390px; height:390px"></iframe>  
 </section>
 <section id="who-we-are">
 <h1>Who we are</h1>
 <img src="http://gravatar.com/avatar/84b921aa2a51d74054cf78cc38c58973?s=512">
+</section>
+<section id="where-we-are">
+  <h1>Where we are</h1>
+  <p>We are located in beautiful downtown Miami, FL.</p>
 </section>
 <script>
 //open up your website in a new window
