--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 </head>
 <body>
   <nav>
-    Home | <a href="#who-we-are">About</a> | Contact
+    Home | <a href="#who-we-are">About</a> | <a href="portfolio.html">Portfolio</a> | Contact 
   </nav>
 <section id="hero">
   <img src="http://i.imgur.com/VHRD9dx.png">  
@@ -80,6 +80,7 @@
   <p>We provide web design and development services. <a href="" onclick="showPrices(event)">Please see our price list.</a></p>
 <!-- SnapWidget -->
 <iframe src="http://snapwidget.com/in/?u=bWl1d2VifGlufDEyNXwzfDN8fG5vfDV8bm9uZXxvblN0YXJ0fHllc3xubw==&ve=080316" title="Instagram Widget" class="snapwidget-widget" allowTransparency="true" frameborder="0" scrolling="no" style="border:none; overflow:hidden; width:390px; height:390px"></iframe>  
+<a href="portfolio.html">See more</a> 
 </section>
 <section id="who-we-are">
 <h1>Who we are</h1>
